# mincode-vuln-arch

./: .gitignore  AGENT.md  LICENSE  README.md  ROADMAP.md  SKILL.md  build_pyz.py  cli.py  mincode.py  mincode.pyz  mincode.toml.example  pyproject.toml
.github/workflows/: audit.yml
references/: agentskills-spec.md  audit-and-chain.md  audit-output-formats.md  ci-gate.md  config-loader.md  engineering-notes.md  gotchas.md  roadmap.md  self-test-gotchas.md  test-generation.md  test-skill-scripts.md  windows-deployment.md  windows-operations.md
scripts/: __init__.py  audit.py  cli.py  config.py  cross_learn.py  gen_ci.py  gen_tests.py  hashchain.py  llm_review.py  mcp_server.py  proj_gen.py  sample_repo.py  vault_index.py
vault/: Audit-app-llm-2026-07-11.md  Audit-demo.md  Audit-web.md  Common-Mistakes.md  Template-..md  Template-demo.md
vault/._chain/: .key  manifest.jsonl
